--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-</head>
-<body>
-<a href="/users/new">Sign Up</a>
-<a href="/sessions/new">Log In</a>
-
-
-<h1>Welcome </h1>
-</body>
-</html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <% if current_user %>
+      Welcome, <%= current_user.username %>
+    <% else %>
+      <a href="/users/new">Sign Up</a>  <a href="/sessions/new">Log In</a>
+    <h1>Welcome</h1>
+    <% end %>
+  </body>
+</html> 
