--- a/app/views/users_new.erb
+++ b/app/views/users_new.erb
@@ -7,17 +7,21 @@
 </head>
 <body>
 
-<form action="/users">
-<label for="username">Username:</label>
-<input type="text" name="username" id="username">
-<label for="email">Email:</label>
-<input type="text" id="email" name="email" >
-<label for="password">Password:</label>
-<input type="text" id="password" name="password">
-<label for="password-confrimation">Confirm Password:</label>
-<input type="text" id="password-confrimation" name="password confirmation">
-<button type='submit'>Sign Up</button>
-</form>
+
+
+
+    <form action="/users" method="POST">
+      <label for="username">Username:</label>
+      <input type="text" name="username" id="username">
+      <label for="email">Email:</label>
+      <input type="text" name="email" id="email">
+      <label for="password">Password:</label>
+      <input type="password" name="password" id="password">
+      <label for="password-confirmation">Confirm password:</label>
+      <input type="password" name="password confirmation" id="password-confirmation">
+      <button type="submit">Sign Up</button>
+    </form>
+
 
 
 </body>
