--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,6 +7,13 @@
   <body>
     <% if current_user %>
       Welcome, <%= current_user.username %>
+      <form action="/sessions" method="POST">
+      <input type="hidden" name="_method" value="delete">
+      <button type="submit">Log Out!</button>
+      </form>
+
+
+
     <% else %>
       <a href="/users/new">Sign Up</a>  <a href="/sessions/new">Log In</a>
     <h1>Welcome</h1>
